# backend/ent/ogent/oas_schemas_gen.go
@@ -1,0 +1,263 @@
+// Code generated by ogen, DO NOT EDIT.
+
+package ogent
+
+import (
+	"bytes"
+	"context"
+	"fmt"
+	"io"
+	"math"
+	"math/big"
+	"math/bits"
+	"net"
+	"net/http"
+	"net/url"
+	"regexp"
+	"sort"
+	"strconv"
+	"strings"
+	"sync"
+	"time"
+
+	"github.com/go-faster/errors"
+	"github.com/go-faster/jx"
+	"github.com/google/uuid"
+	"github.com/ogen-go/ogen/conv"
+	ht "github.com/ogen-go/ogen/http"
+	"github.com/ogen-go/ogen/json"
+	"github.com/ogen-go/ogen/otelogen"
+	"github.com/ogen-go/ogen/uri"
+	"github.com/ogen-go/ogen/validate"
+	"go.opentelemetry.io/otel"
+	"go.opentelemetry.io/otel/attribute"
+	"go.opentelemetry.io/otel/codes"
+	"go.opentelemetry.io/otel/metric"
+	"go.opentelemetry.io/otel/trace"
+)
+
+// No-op definition for keeping imports.
+var (
+	_ = context.Background()
+	_ = fmt.Stringer(nil)
+	_ = strings.Builder{}
+	_ = errors.Is
+	_ = sort.Ints
+	_ = http.MethodGet
+	_ = io.Copy
+	_ = json.Marshal
+	_ = bytes.NewReader
+	_ = strconv.ParseInt
+	_ = time.Time{}
+	_ = conv.ToInt32
+	_ = uuid.UUID{}
+	_ = uri.PathEncoder{}
+	_ = url.URL{}
+	_ = math.Mod
+	_ = bits.LeadingZeros64
+	_ = big.Rat{}
+	_ = validate.Int{}
+	_ = ht.NewRequest
+	_ = net.IP{}
+	_ = otelogen.Version
+	_ = attribute.KeyValue{}
+	_ = trace.TraceIDFromHex
+	_ = otel.GetTracerProvider
+	_ = metric.NewNoopMeterProvider
+	_ = regexp.MustCompile
+	_ = jx.Null
+	_ = sync.Pool{}
+	_ = codes.Unset
+)
+
+type CreateUserReq struct {
+	Age  int    "json:\"age\""
+	Name string "json:\"name\""
+}
+
+// DeleteUserNoContent is response for DeleteUser operation.
+type DeleteUserNoContent struct{}
+
+func (*DeleteUserNoContent) deleteUserRes() {}
+
+type ListUserOKApplicationJSON []UserList
+
+func (ListUserOKApplicationJSON) listUserRes() {}
+
+// NewOptInt returns new OptInt with value set to v.
+func NewOptInt(v int) OptInt {
+	return OptInt{
+		Value: v,
+		Set:   true,
+	}
+}
+
+// OptInt is optional int.
+type OptInt struct {
+	Value int
+	Set   bool
+}
+
+// IsSet returns true if OptInt was set.
+func (o OptInt) IsSet() bool { return o.Set }
+
+// Reset unsets value.
+func (o *OptInt) Reset() {
+	var v int
+	o.Value = v
+	o.Set = false
+}
+
+// SetTo sets value to v.
+func (o *OptInt) SetTo(v int) {
+	o.Set = true
+	o.Value = v
+}
+
+// Get returns value and boolean that denotes whether value was set.
+func (o OptInt) Get() (v int, ok bool) {
+	if !o.Set {
+		return v, false
+	}
+	return o.Value, true
+}
+
+// Or returns value if set, or given parameter if does not.
+func (o OptInt) Or(d int) int {
+	if v, ok := o.Get(); ok {
+		return v
+	}
+	return d
+}
+
+// NewOptString returns new OptString with value set to v.
+func NewOptString(v string) OptString {
+	return OptString{
+		Value: v,
+		Set:   true,
+	}
+}
+
+// OptString is optional string.
+type OptString struct {
+	Value string
+	Set   bool
+}
+
+// IsSet returns true if OptString was set.
+func (o OptString) IsSet() bool { return o.Set }
+
+// Reset unsets value.
+func (o *OptString) Reset() {
+	var v string
+	o.Value = v
+	o.Set = false
+}
+
+// SetTo sets value to v.
+func (o *OptString) SetTo(v string) {
+	o.Set = true
+	o.Value = v
+}
+
+// Get returns value and boolean that denotes whether value was set.
+func (o OptString) Get() (v string, ok bool) {
+	if !o.Set {
+		return v, false
+	}
+	return o.Value, true
+}
+
+// Or returns value if set, or given parameter if does not.
+func (o OptString) Or(d string) string {
+	if v, ok := o.Get(); ok {
+		return v
+	}
+	return d
+}
+
+type R400 struct {
+	Code   int    "json:\"code\""
+	Status string "json:\"status\""
+	Errors jx.Raw "json:\"errors\""
+}
+
+func (*R400) createUserRes() {}
+func (*R400) deleteUserRes() {}
+func (*R400) listUserRes()   {}
+func (*R400) readUserRes()   {}
+func (*R400) updateUserRes() {}
+
+type R404 struct {
+	Code   int    "json:\"code\""
+	Status string "json:\"status\""
+	Errors jx.Raw "json:\"errors\""
+}
+
+func (*R404) deleteUserRes() {}
+func (*R404) listUserRes()   {}
+func (*R404) readUserRes()   {}
+func (*R404) updateUserRes() {}
+
+type R409 struct {
+	Code   int    "json:\"code\""
+	Status string "json:\"status\""
+	Errors jx.Raw "json:\"errors\""
+}
+
+func (*R409) createUserRes() {}
+func (*R409) deleteUserRes() {}
+func (*R409) listUserRes()   {}
+func (*R409) readUserRes()   {}
+func (*R409) updateUserRes() {}
+
+type R500 struct {
+	Code   int    "json:\"code\""
+	Status string "json:\"status\""
+	Errors jx.Raw "json:\"errors\""
+}
+
+func (*R500) createUserRes() {}
+func (*R500) deleteUserRes() {}
+func (*R500) listUserRes()   {}
+func (*R500) readUserRes()   {}
+func (*R500) updateUserRes() {}
+
+type UpdateUserReq struct {
+	Age  OptInt    "json:\"age\""
+	Name OptString "json:\"name\""
+}
+
+// Ref: #/components/schemas/UserCreate
+type UserCreate struct {
+	ID   int    "json:\"id\""
+	Age  int    "json:\"age\""
+	Name string "json:\"name\""
+}
+
+func (*UserCreate) createUserRes() {}
+
+// Ref: #/components/schemas/UserList
+type UserList struct {
+	ID   int    "json:\"id\""
+	Age  int    "json:\"age\""
+	Name string "json:\"name\""
+}
+
+// Ref: #/components/schemas/UserRead
+type UserRead struct {
+	ID   int    "json:\"id\""
+	Age  int    "json:\"age\""
+	Name string "json:\"name\""
+}
+
+func (*UserRead) readUserRes() {}
+
+// Ref: #/components/schemas/UserUpdate
+type UserUpdate struct {
+	ID   int    "json:\"id\""
+	Age  int    "json:\"age\""
+	Name string "json:\"name\""
+}
+
+func (*UserUpdate) updateUserRes() {}
